Change USER_HEADER_SEARCH_PATHS to silence a warning in Xcode 7.
I actually don't know why this makes any difference -- I thought the default
working directory for USER_HEADER_SEARCH_PATHS was SRCROOT anyway.

--- a/external/xcconfigs/Base/Targets/StaticLibrary.xcconfig
+++ b/external/xcconfigs/Base/Targets/StaticLibrary.xcconfig
@@ -25,7 +25,7 @@ PUBLIC_HEADERS_FOLDER_PATH = include/$PRODUCT_NAME
 // When compiling this library, look for imports (written with quotes) in the
 // library's own folder first. This avoids conflicts from other headers in the
 // build folder.
-USER_HEADER_SEARCH_PATHS = ./**
+USER_HEADER_SEARCH_PATHS = $(SRCROOT)/**
 
 // Don't include in an xcarchive
 SKIP_INSTALL = YES
